# hi3516dv300

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  build_kernel.sh  bundle.json  check_build.sh  kernel.mk  kernel_build.py  kernel_module_build.sh  ohos.build
test/: BUILD.gn  init_runtest.sh
test/fuzztest/: BUILD.gn
test/fuzztest/accesstokenid/: BUILD.gn
test/fuzztest/accesstokenid/accessftokenidgrptest_fuzzer/: BUILD.gn  accessftokenidgrptest_fuzzer.cpp
test/fuzztest/accesstokenid/accessftokenidgrptestother_fuzzer/: BUILD.gn  accessftokenidgrptestother_fuzzer.cpp
test/fuzztest/accesstokenid/accessftokenidthreadtest_fuzzer/: BUILD.gn  accessftokenidthreadtest_fuzzer.cpp
test/fuzztest/accesstokenid/accesstokenidgrptest_fuzzer/: BUILD.gn  accesstokenidgrptest_fuzzer.cpp
test/fuzztest/accesstokenid/accesstokenidgrptestother_fuzzer/: BUILD.gn  accesstokenidgrptestother_fuzzer.cpp
test/fuzztest/accesstokenid/accesstokenidthreadtest_fuzzer/: BUILD.gn  accesstokenidthreadtest_fuzzer.cpp
test/fuzztest/accesstokenid/getftokenidcmdcorrect_fuzzer/: BUILD.gn  getftokenidcmdcorrect_fuzzer.cpp  getftokenidcmdcorrect_fuzzer.h
test/fuzztest/accesstokenid/getftokenidcmderror_fuzzer/: BUILD.gn  getftokenidcmderror_fuzzer.cpp  getftokenidcmderror_fuzzer.h
test/fuzztest/accesstokenid/getftokenidnullptr_fuzzer/: BUILD.gn  getftokenidnullptr_fuzzer.cpp
test/fuzztest/accesstokenid/gettokenidcmdcorrect_fuzzer/: BUILD.gn  gettokenidcmdcorrect_fuzzer.cpp  gettokenidcmdcorrect_fuzzer.h
test/fuzztest/accesstokenid/gettokenidcmderror_fuzzer/: BUILD.gn  gettokenidcmderror_fuzzer.cpp  gettokenidcmderror_fuzzer.h
test/fuzztest/accesstokenid/gettokenidnullptr_fuzzer/: BUILD.gn  gettokenidnullptr_fuzzer.cpp
test/fuzztest/accesstokenid/include/: accessftokenidcommon.h  accesstokenidcmdcorrect.h  accesstokenidcmderror.h  accesstokenidcommon.h
test/fuzztest/accesstokenid/setftokenidcmdcorrect_fuzzer/: BUILD.gn  setftokenidcmdcorrect_fuzzer.cpp  setftokenidcmdcorrect_fuzzer.h
test/fuzztest/accesstokenid/setftokenidcmderror_fuzzer/: BUILD.gn  setftokenidcmderror_fuzzer.cpp  setftokenidcmderror_fuzzer.h
test/fuzztest/accesstokenid/setftokenidnullptr_fuzzer/: BUILD.gn  setftokenidnullptr_fuzzer.cpp
test/fuzztest/accesstokenid/settokenidcmdcorrect_fuzzer/: BUILD.gn  settokenidcmdcorrect_fuzzer.cpp  settokenidcmdcorrect_fuzzer.h
test/fuzztest/accesstokenid/settokenidcmderror_fuzzer/: BUILD.gn  settokenidcmderror_fuzzer.cpp  settokenidcmderror_fuzzer.h
test/fuzztest/accesstokenid/settokenidnullptr_fuzzer/: BUILD.gn  settokenidnullptr_fuzzer.cpp
test/fuzztest/accesstokenid/src/: accessftokenidcommon.cpp  accesstokenidcmdcorrect.cpp  accesstokenidcmderror.cpp  accesstokenidcommon.cpp
test/fuzztest/hc_node/: BUILD.gn
test/fuzztest/hc_node/hcenable_fuzzer/: BUILD.gn  hcenable_fuzzer.cpp
test/fuzztest/hc_node/hchotdatalowerlimit_fuzzer/: BUILD.gn  hchotdatalowerlimit_fuzzer.cpp
test/fuzztest/hc_node/hchotdatawaterline_fuzzer/: BUILD.gn  hchotdatawaterline_fuzzer.cpp
test/fuzztest/hc_node/hchotnodelowerlimit_fuzzer/: BUILD.gn  hchotnodelowerlimit_fuzzer.cpp
test/fuzztest/hc_node/hchotnodewaterline_fuzzer/: BUILD.gn  hchotnodewaterline_fuzzer.cpp
test/fuzztest/hc_node/hcwarmdatalowerlimit_fuzzer/: BUILD.gn  hcwarmdatalowerlimit_fuzzer.cpp
test/fuzztest/hc_node/hcwarmdatawaterline_fuzzer/: BUILD.gn  hcwarmdatawaterline_fuzzer.cpp
test/fuzztest/hc_node/hcwarmnodelowerlimit_fuzzer/: BUILD.gn  hcwarmnodelowerlimit_fuzzer.cpp
test/fuzztest/hc_node/hcwarmnodewaterline_fuzzer/: BUILD.gn  hcwarmnodewaterline_fuzzer.cpp
test/fuzztest/hc_node/include/: hccommon.h
test/fuzztest/hc_node/src/: hccommon.cpp
test/fuzztest/memory/: BUILD.gn
test/fuzztest/memory/anonrefaultsnapshotmininterval_fuzzer/: BUILD.gn  anonrefaultsnapshotmininterval_fuzzer.cpp
test/fuzztest/memory/appscore_fuzzer/: BUILD.gn  appscore_fuzzer.cpp
test/fuzztest/memory/areaanonrefaultthreshold_fuzzer/: BUILD.gn  areaanonrefaultthreshold_fuzzer.cpp
test/fuzztest/memory/availbuffers_fuzzer/: BUILD.gn  availbuffers_fuzzer.cpp
test/fuzztest/memory/bufferratioparams_fuzzer/: BUILD.gn  bufferratioparams_fuzzer.cpp
test/fuzztest/memory/compressratio_fuzzer/: BUILD.gn  compressratio_fuzzer.cpp
test/fuzztest/memory/emptyroundcheckthreshold_fuzzer/: BUILD.gn  emptyroundcheckthreshold_fuzzer.cpp
test/fuzztest/memory/emptyroundskipinterval_fuzzer/: BUILD.gn  emptyroundskipinterval_fuzzer.cpp
test/fuzztest/memory/forceshrinkanon_fuzzer/: BUILD.gn  forceshrinkanon_fuzzer.cpp
test/fuzztest/memory/include/: memorycommon.h
test/fuzztest/memory/maxskipinterval_fuzzer/: BUILD.gn  maxskipinterval_fuzzer.cpp
test/fuzztest/memory/name_fuzzer/: BUILD.gn  name_fuzzer.cpp
test/fuzztest/memory/src/: memorycommon.cpp
test/fuzztest/memory/ubufs2zramratio_fuzzer/: BUILD.gn  ubufs2zramratio_fuzzer.cpp
test/fuzztest/memory/zramcriticalthreshold_fuzzer/: BUILD.gn  zramcriticalthreshold_fuzzer.cpp
test/fuzztest/memory/zramwmratio_fuzzer/: BUILD.gn  zramwmratio_fuzzer.cpp
test/fuzztest/memory/zswapdmaxreclaimsize_fuzzer/: BUILD.gn  (+1 more)
test/fuzztest/sched/: BUILD.gn
test/kernel_ltp/: BUILD.gn  generate_config.sh  kernel_interface_template.gni  macrolists
test/kernel_ltp/syscalls/: BUILD.gn
test/moduletest/: Test.json
test/moduletest/runtest/: runtest
test/tracepointtest/: BUILD.gn  Kconfig  Makefile  emmc.h  rockchip_linux_defconfig  tracepoint.sh  tracepointtestko.sh
test/tracepointtest/tracepoint_test/: Kconfig  Makefile  tracepoint_test.c
test/tracepointtest/vendoramlemmcpartition_test/: Kconfig  Makefile  vendoramlemmcpartition_test.c
test/tracepointtest/vendordommap_test/: Kconfig  Makefile  vendordommap_test.c
test/tracepointtest/vendordomprotectpkey_test/: Kconfig  Makefile  vendordomprotectpkey_test.c
test/tracepointtest/vendorfakebootpartition_test/: Kconfig  Makefile  vendorfakebootpartition_test.c
test/unittest/accesstokenid/: Test.json  accesstokenid_test.cpp  accesstokenid_test.h
test/unittest/rtg/: Test.json  rtg_test.cpp  rtg_test.h
(+124 files in other folders)
