# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

template("kernel_interface_bin") {
  executable(target_name) {
    forward_variables_from(invoker, "*")
    cflags = [ "-w" ]
    defines = [ "HAVE_ATOMIC_MEMORY_MODEL=1" ]
    if (!defined(invoker.include_dirs)) {
      include_dirs = []
    }
    deps = [ "//kernel/linux/build/test/kernel_ltp:kernel_ltp_test" ]
    include_dirs += [
      "${root_build_dir}/tests/ltp_testcases/ltp/include",
      "${root_build_dir}/tests/ltp_testcases/ltp/include/old",
    ]
  }
}
