# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "accessftokenidgrptest_fuzzer:AccessfTokenidGrpTestFuzzTest",
    "accessftokenidgrptestother_fuzzer:AccessfTokenidGrpTestOtherFuzzTest",
    "accessftokenidthreadtest_fuzzer:AccessfTokenidThreadTestFuzzTest",
    "accesstokenidgrptest_fuzzer:AccessTokenidGrpTestFuzzTest",
    "accesstokenidgrptestother_fuzzer:AccessTokenidGrpTestOtherFuzzTest",
    "accesstokenidthreadtest_fuzzer:AccessTokenidThreadTestFuzzTest",
    "getftokenidcmdcorrect_fuzzer:GetfTokenidCmdCorrectFuzzTest",
    "getftokenidcmderror_fuzzer:GetfTokenidCmdErrorFuzzTest",
    "getftokenidnullptr_fuzzer:GetfTokenidNullptrFuzzTest",
    "gettokenidcmdcorrect_fuzzer:GetTokenidCmdCorrectFuzzTest",
    "gettokenidcmderror_fuzzer:GetTokenidCmdErrorFuzzTest",
    "gettokenidnullptr_fuzzer:GetTokenidNullptrFuzzTest",
    "setftokenidcmdcorrect_fuzzer:SetfTokenidCmdCorrectFuzzTest",
    "setftokenidcmderror_fuzzer:SetfTokenidCmdErrorFuzzTest",
    "setftokenidnullptr_fuzzer:SetfTokenidNullptrFuzzTest",
    "settokenidcmdcorrect_fuzzer:SetTokenidCmdCorrectFuzzTest",
    "settokenidcmderror_fuzzer:SetTokenidCmdErrorFuzzTest",
    "settokenidnullptr_fuzzer:SetTokenidNullptrFuzzTest",
  ]
}
