# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    "hcenable_fuzzer:HcEnableFuzzTest",
    "hchotdatalowerlimit_fuzzer:HcHotDataLowerLimitFuzzTest",
    "hchotdatawaterline_fuzzer:HcHotDataWaterlineFuzzTest",
    "hchotnodelowerlimit_fuzzer:HcHotNodeLowerLimitFuzzTest",
    "hchotnodewaterline_fuzzer:HcHotNodeWaterLineFuzzTest",
    "hcwarmdatalowerlimit_fuzzer:HcWarmDataLowerLimitFuzzTest",
    "hcwarmdatawaterline_fuzzer:HcWarmDataWaterLineFuzzTest",
    "hcwarmnodelowerlimit_fuzzer:HcWarmNodeLowerLimitFuzzTest",
    "hcwarmnodewaterline_fuzzer:HcWarmNodeWaterLineFuzzTest",
  ]
}
