# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("HatsSyscallsTest") {
  testonly = true
  deps = [
    "abort:abort01",
    "accept:accept01",
    "accept:accept02",
    "accept4:accept4_01",
    "access:access01",
    "access:access02",
    "access:access03",
    "access:access04",
    "acct:acct01",
    "acct:acct02",
    "add_key:add_key01",
    "add_key:add_key02",
    "add_key:add_key03",
    "add_key:add_key04",
    "add_key:add_key05",
    "adjtimex:adjtimex01",
    "adjtimex:adjtimex02",
    "adjtimex:adjtimex03",
    "alarm:alarm02",
    "alarm:alarm03",
    "alarm:alarm05",
    "alarm:alarm06",
    "alarm:alarm07",
    "bind:bind01",
    "bind:bind02",
    "bind:bind03",
    "bind:bind04",
    "bind:bind05",
    "bind:bind06",
    "bpf:bpf_map01",
    "bpf:bpf_prog01",
    "bpf:bpf_prog02",
    "bpf:bpf_prog03",
    "bpf:bpf_prog04",
    "bpf:bpf_prog05",
    "brk:brk01",
    "brk:brk02",
    "cacheflush:cacheflush01",
    "capget:capget01",
    "capget:capget02",
    "capset:capset01",
    "capset:capset02",
    "capset:capset03",
    "capset:capset04",
    "chdir:chdir01",
    "chdir:chdir04",
    "chmod:chmod01",
    "chmod:chmod03",
    "chmod:chmod05",
    "chmod:chmod06",
    "chmod:chmod07",
    "chown:chown01",
    "chown:chown02",
    "chown:chown03",
    "chown:chown04",
    "chown:chown05",
    "chroot:chroot01",
    "chroot:chroot02",
    "chroot:chroot03",
    "chroot:chroot04",
    "clock_adjtime:clock_adjtime01",
    "clock_adjtime:clock_adjtime02",
    "clock_getres:clock_getres01",
    "clock_gettime:clock_gettime01",
    "clock_gettime:clock_gettime02",
    "clock_gettime:clock_gettime03",
    "clock_gettime:clock_gettime04",
    "clock_gettime:leapsec01",
    "clock_nanosleep:clock_nanosleep01",
    "clock_nanosleep:clock_nanosleep02",
    "clock_nanosleep:clock_nanosleep03",
    "clock_nanosleep:clock_nanosleep04",
    "clock_settime:clock_settime01",
    "clock_settime:clock_settime02",
    "clock_settime:clock_settime03",
    "clone:clone01",
    "clone:clone02",
    "clone:clone03",
    "clone:clone04",
    "clone:clone05",
    "clone:clone06",
    "clone:clone07",
    "clone:clone08",
    "clone:clone09",
    "clone3:clone301",
    "clone3:clone302",
    "close:close01",
    "close:close02",
    "close_range:close_range01",
    "close_range:close_range02",
    "cma:process_vm01",
    "cma:process_vm_readv02",
    "cma:process_vm_readv03",
    "cma:process_vm_writev02",
    "connect:connect01",
    "connect:connect02",
    "copy_file_range:copy_file_range01",
    "copy_file_range:copy_file_range02",
    "copy_file_range:copy_file_range03",
    "creat:creat01",
    "creat:creat03",
    "creat:creat04",
    "creat:creat05",
    "creat:creat06",
    "creat:creat07",
    "creat:creat07_child",
    "creat:creat08",
    "creat:creat09",
  ]
}
