# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("HatsSyscallsTest") {
  testonly = true
  deps = [
    "abort:abort01",
    "accept:accept01",
    "accept:accept02",
    "accept4:accept4_01",
    "access:access01",
    "access:access02",
    "access:access03",
    "access:access04",
    "acct:acct01",
    "acct:acct02",
    "add_key:add_key01",
    "add_key:add_key02",
    "add_key:add_key03",
    "add_key:add_key04",
    "add_key:add_key05",
    "adjtimex:adjtimex01",
    "adjtimex:adjtimex02",
    "adjtimex:adjtimex03",
    "alarm:alarm02",
    "alarm:alarm03",
    "alarm:alarm05",
    "alarm:alarm06",
    "alarm:alarm07",
    "bind:bind01",
    "bind:bind02",
    "bind:bind03",
    "bind:bind04",
    "bind:bind05",
    "bind:bind06",
    "bpf:bpf_map01",
    "bpf:bpf_prog01",
    "bpf:bpf_prog02",
    "bpf:bpf_prog03",
    "bpf:bpf_prog04",
    "bpf:bpf_prog05",
    "brk:brk01",
    "brk:brk02",
    "cacheflush:cacheflush01",
    "capget:capget01",
    "capget:capget02",
    "capset:capset01",
    "capset:capset02",
    "capset:capset03",
    "capset:capset04",
    "chdir:chdir01",
    "chdir:chdir04",
    "chmod:chmod01",
    "chmod:chmod03",
    "chmod:chmod05",
    "chmod:chmod06",
    "chmod:chmod07",
    "chown:chown01",
    "chown:chown02",
    "chown:chown03",
    "chown:chown04",
    "chown:chown05",
    "chroot:chroot01",
    "chroot:chroot02",
    "chroot:chroot03",
    "chroot:chroot04",
    "clock_adjtime:clock_adjtime01",
    "clock_adjtime:clock_adjtime02",
    "clock_getres:clock_getres01",
    "clock_gettime:clock_gettime01",
    "clock_gettime:clock_gettime02",
    "clock_gettime:clock_gettime03",
    "clock_gettime:clock_gettime04",
    "clock_gettime:leapsec01",
    "clock_nanosleep:clock_nanosleep01",
    "clock_nanosleep:clock_nanosleep02",
    "clock_nanosleep:clock_nanosleep03",
    "clock_nanosleep:clock_nanosleep04",
    "clock_settime:clock_settime01",
    "clock_settime:clock_settime02",
    "clock_settime:clock_settime03",
    "clone:clone01",
    "clone:clone02",
    "clone:clone03",
    "clone:clone04",
    "clone:clone05",
    "clone:clone06",
    "clone:clone07",
    "clone:clone08",
    "clone:clone09",
    "clone3:clone301",
    "clone3:clone302",
    "close:close01",
    "close:close02",
    "close_range:close_range01",
    "close_range:close_range02",
    "cma:process_vm01",
    "cma:process_vm_readv02",
    "cma:process_vm_readv03",
    "cma:process_vm_writev02",
    "connect:connect01",
    "connect:connect02",
    "copy_file_range:copy_file_range01",
    "copy_file_range:copy_file_range02",
    "copy_file_range:copy_file_range03",
    "creat:creat01",
    "creat:creat03",
    "creat:creat04",
    "creat:creat05",
    "creat:creat06",
    "creat:creat07",
    "creat:creat07_child",
    "creat:creat08",
    "creat:creat09",
    "dup:dup01",
    "dup:dup02",
    "dup:dup03",
    "dup:dup04",
    "dup:dup05",
    "dup:dup06",
    "dup:dup07",
    "dup2:dup201",
    "dup2:dup202",
    "dup2:dup203",
    "dup2:dup204",
    "dup2:dup205",
    "dup2:dup206",
    "dup2:dup207",
    "dup3:dup3_01",
    "dup3:dup3_02",
    "epoll_create1:epoll_create1_01",
    "epoll_create1:epoll_create1_02",
    "epoll_ctl:epoll_ctl01",
    "epoll_ctl:epoll_ctl02",
    "epoll_ctl:epoll_ctl03",
    "epoll_ctl:epoll_ctl04",
    "epoll_ctl:epoll_ctl05",
    "epoll_wait:epoll_wait01",
    "epoll_wait:epoll_wait02",
    "epoll_wait:epoll_wait03",
    "epoll_wait:epoll_wait04",
    "eventfd2:eventfd2_01",
    "eventfd2:eventfd2_02",
    "eventfd2:eventfd2_03",
    "execl:execl01",
    "execl:execl01_child",
    "execle:execle01",
    "execle:execle01_child",
    "execlp:execlp01",
    "execlp:execlp01_child",
    "execv:execv01",
    "execv:execv01_child",
    "execve:execve01",
    "execve:execve01_child",
    "execve:execve02",
    "execve:execve03",
    "execve:execve04",
    "execve:execve05",
    "execvp:execvp01",
    "execvp:execvp01_child",
    "exit:exit01",
    "exit:exit02",
    "exit_group:exit_group01",
    "faccessat:faccessat01",
    "fadvis:posix_fadvise01",
    "fadvis:posix_fadvise02",
    "fadvis:posix_fadvise03",
    "fadvis:posix_fadvise04",
    "fchdir:fchdir01",
    "fchdir:fchdir02",
    "fchdir:fchdir03",
    "fchmodat:fchmodat01",
    "fchown:fchown01",
    "fchown:fchown02",
    "fchown:fchown03",
    "fchown:fchown04",
    "fchown:fchown05",
    "fchownat:fchownat01",
    "fchownat:fchownat02",
    "flistxattr:flistxattr01",
    "flistxattr:flistxattr02",
    "flistxattr:flistxattr03",
    "flock:flock01",
    "flock:flock02",
    "flock:flock03",
    "flock:flock04",
    "flock:flock06",
    "fpathconf:fpathconf01",
    "fstat:fstat02",
    "fstat:fstat03",
    "futex:futex_cmp_requeue01",
    "futex:futex_cmp_requeue02",
    "futex:futex_wait01",
    "futex:futex_wait02",
    "futex:futex_wait03",
    "futex:futex_wait04",
    "futex:futex_wait05",
    "futex:futex_wait_bitset01",
    "futex:futex_wake01",
    "futex:futex_wake02",
    "futex:futex_wake03",
    "futex:futex_wake04",
    "getcpu:getcpu01",
    "getcwd:getcwd01",
    "getcwd:getcwd02",
    "getcwd:getcwd03",
    "getcwd:getcwd04",
    "getdomainname:getdomainname01",
    "geteuid:geteuid01",
    "geteuid:geteuid02",
    "getgid:getgid01",
    "getgid:getgid03",
    "getgroups:getgroups01",
    "getgroups:getgroups03",
    "gethostname:gethostname01",
    "getitimer:getitimer01",
    "getitimer:getitimer02",
    "getitimer:getitimer03",
    "getpagesize:getpagesize01",
    "getpeername:getpeername01",
    "getpgid:getpgid01",
    "getpgid:getpgid02",
    "getpgrp:getpgrp01",
    "getpid:getpid01",
    "getpid:getpid02",
    "getppid:getppid01",
    "getppid:getppid02",
    "getpriority:getpriority01",
    "getpriority:getpriority02",
    "getrandom:getrandom01",
    "getrandom:getrandom02",
    "getrandom:getrandom03",
    "getrandom:getrandom04",
    "getresgid:getresgid01",
    "getresgid:getresgid02",
    "getresgid:getresgid03",
    "getresuid:getresuid01",
    "getresuid:getresuid02",
    "getresuid:getresuid03",
    "getrlimit:getrlimit01",
    "getrlimit:getrlimit02",
    "getrlimit:getrlimit03",
    "getsid:getsid01",
    "getsid:getsid02",
    "getsockname:getsockname01",
    "getsockopt:getsockopt01",
    "getsockopt:getsockopt02",
    "gettid:gettid01",
    "gettimeofday:gettimeofday01",
    "gettimeofday:gettimeofday02",
    "getuid:getuid01",
    "getuid:getuid03",
    "inotify_init:inotify_init1_01",
    "inotify_init:inotify_init1_02",
    "kcmp:kcmp01",
    "kcmp:kcmp02",
    "kcmp:kcmp03",
    "keyctl:keyctl01",
    "keyctl:keyctl02",
    "keyctl:keyctl03",
    "keyctl:keyctl04",
    "keyctl:keyctl05",
    "keyctl:keyctl06",
    "keyctl:keyctl07",
    "keyctl:keyctl08",
    "lgetxattr:lgetxattr01",
    "lgetxattr:lgetxattr02",
    "listen:listen01",
    "listxattr:listxattr01",
    "listxattr:listxattr02",
    "listxattr:listxattr03",
    "llistxattr:llistxattr01",
    "llistxattr:llistxattr02",
    "llistxattr:llistxattr03",
    "llseek:llseek01",
    "llseek:llseek02",
    "llseek:llseek03",
  ]
}
