# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

module_output_path = "linuxkerneltest/hc_node"

ohos_fuzztest("HcHotDataLowerLimitFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//kernel/linux/build/test/fuzztest/hc_node/hchotdatalowerlimit_fuzzer"

  include_dirs = [ "../include" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../src/hccommon.cpp",
    "hchotdatalowerlimit_fuzzer.cpp",
  ]
}

group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":HcHotDataLowerLimitFuzzTest" ]
}
