# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//kernel/linux/build/test/kernel_ltp/kernel_interface_template.gni")

_output_dir = "${root_out_dir}/tests/ltp_testcases/SyscallsTest"

kernel_interface_bin("add_key01") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/add_key/add_key01.c" ]
}

kernel_interface_bin("add_key02") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/add_key/add_key02.c" ]
}

kernel_interface_bin("add_key03") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/add_key/add_key03.c" ]
}

kernel_interface_bin("add_key04") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/add_key/add_key04.c" ]
}

kernel_interface_bin("add_key05") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/add_key/add_key05.c" ]
}
