# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//kernel/linux/build/test/kernel_ltp/kernel_interface_template.gni")

_output_dir = "${root_out_dir}/tests/ltp_testcases/SyscallsTest"

kernel_interface_bin("creat01") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat01.c" ]
}

kernel_interface_bin("creat03") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat03.c" ]
}

kernel_interface_bin("creat04") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat04.c" ]
}

kernel_interface_bin("creat05") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat05.c" ]
}

kernel_interface_bin("creat06") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat06.c" ]
}

kernel_interface_bin("creat07") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat07.c" ]
}

kernel_interface_bin("creat07_child") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat07_child.c" ]
}

kernel_interface_bin("creat08") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat08.c" ]
}

kernel_interface_bin("creat09") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/creat/creat09.c" ]
}
