# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//kernel/linux/build/test/kernel_ltp/kernel_interface_template.gni")

_output_dir = "${root_out_dir}/tests/ltp_testcases/SyscallsTest"

kernel_interface_bin("futex_cmp_requeue01") {
  output_dir = "${_output_dir}"
  sources = [
    "//third_party/ltp/testcases/kernel/syscalls/futex/futex_cmp_requeue01.c",
  ]
}

kernel_interface_bin("futex_cmp_requeue02") {
  output_dir = "${_output_dir}"
  sources = [
    "//third_party/ltp/testcases/kernel/syscalls/futex/futex_cmp_requeue02.c",
  ]
}

kernel_interface_bin("futex_wait01") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait01.c" ]
}

kernel_interface_bin("futex_wait02") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait02.c" ]
}

kernel_interface_bin("futex_wait03") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait03.c" ]
}

kernel_interface_bin("futex_wait04") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait04.c" ]
}

kernel_interface_bin("futex_wait05") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait05.c" ]
}

kernel_interface_bin("futex_wait_bitset01") {
  output_dir = "${_output_dir}"
  sources = [
    "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wait_bitset01.c",
  ]
}

kernel_interface_bin("futex_wake01") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wake01.c" ]
}

kernel_interface_bin("futex_wake02") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wake02.c" ]
}

kernel_interface_bin("futex_wake03") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wake03.c" ]
}

kernel_interface_bin("futex_wake04") {
  output_dir = "${_output_dir}"
  sources =
      [ "//third_party/ltp/testcases/kernel/syscalls/futex/futex_wake04.c" ]
}
