# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//kernel/linux/build/test/kernel_ltp/kernel_interface_template.gni")

_output_dir = "${root_out_dir}/tests/ltp_testcases/SyscallsTest"

kernel_interface_bin("keyctl01") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl01.c" ]
}

kernel_interface_bin("keyctl02") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl02.c" ]
}

kernel_interface_bin("keyctl03") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl03.c" ]
}

kernel_interface_bin("keyctl04") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl04.c" ]
}

kernel_interface_bin("keyctl05") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl05.c" ]
}

kernel_interface_bin("keyctl06") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl06.c" ]
}

kernel_interface_bin("keyctl07") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl07.c" ]
}

kernel_interface_bin("keyctl08") {
  output_dir = "${_output_dir}"
  sources = [ "//third_party/ltp/testcases/kernel/syscalls/keyctl/keyctl08.c" ]
}
